Add ScreenSize Value Changer

--- a/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
@@ -19,6 +19,8 @@
             <RowDefinition Height="5*" />
             <RowDefinition Height="20*" />
             <RowDefinition Height="5*" />
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         <Label Content="Tamaño de la fuente" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
         <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2"
@@ -27,5 +29,26 @@
                 ValueChanged="SliderFontSize_ValueChanged"/>
         <Label Content="Familia de la fuente" Grid.Column="1" Grid.Row="3" VerticalContentAlignment="Center" VerticalAlignment="Center" />
         <ComboBox x:Name="ComboBoxFontFamily" Grid.Column="1" Grid.Row="4" SelectionChanged="ComboBoxFontFamily_SelectionChanged"/>
+        <Label Content="Tamaño de la Ventana" Grid.Column="1" Grid.Row="5" VerticalContentAlignment="Center" VerticalAlignment="Center" />
+        <Grid Grid.Column="1" Grid.Row="6">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50*"/>
+                <ColumnDefinition Width="50*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20*" />
+                <RowDefinition Height="80*" />
+            </Grid.RowDefinitions>
+            <Label Content="Horizontal" Grid.Column="0" Grid.Row="0" VerticalContentAlignment="Center" VerticalAlignment="Center" />
+            <Slider x:Name="SliderWidthSize" Grid.Column="0" Grid.Row="2"
+                Minimum="800" Maximum="3840"
+                HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"
+                ValueChanged="ScreenSize_ValueChanged"/>
+            <Label Content="Vertical" Grid.Column="1" Grid.Row="0" VerticalContentAlignment="Center" VerticalAlignment="Center" />
+            <Slider x:Name="SliderHeightSize" Grid.Column="1" Grid.Row="2"
+                Minimum="600" Maximum="2160"
+                HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"
+                ValueChanged="ScreenSize_ValueChanged"/>
+        </Grid>
     </Grid>
 </Window>
