--- a/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
@@ -21,6 +21,7 @@
             <RowDefinition Height="5*" />
             <RowDefinition Height="20*" />
             <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         <Label Content="Tamaño de la fuente" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
         <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2"
@@ -50,5 +51,6 @@
                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"
                 ValueChanged="ScreenSize_ValueChanged"/>
         </Grid>
+        <CheckBox Grid.Column="1" Grid.Row="7" Content="Mantener relacion de aspecto" />
     </Grid>
 </Window>
