--- a/Gestion_AcademicoAdministrativa_Abastos/styles/Button.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/Button.xaml
@@ -1,13 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.styles">
-    <Style TargetType="Button" x:Key="basicButton">
+    <Style TargetType="Button" x:Key="basicButton" BasedOn="{StaticResource SpecialTextControl}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
-        <Setter Property="FontFamily" Value="Ubuntu" />
+        <Setter Property="FontFamily" Value="{DynamicResource StandardFontFamily}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
