--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -136,8 +136,8 @@
                             <Label Grid.Column="0" Content="Email"/>
                             <TextBox x:Name="TxtEmail" Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                             <Label Grid.Column="2" Content="Teléfono/s"/>
-                            <DataGrid x:Name="DataGridTelefono" Grid.Column="2" Grid.Row="1" IsReadOnly="True" Margin="15">
-                                
+                            <DataGrid x:Name="DataGridTelefono" Grid.Column="2" Grid.Row="1" IsReadOnly="True" Margin="15" HeadersVisibility="None">
+                                <DataGridTextColumn Width="100*" Binding="{Binding Telefono}"/>
                             </DataGrid>
                         </Grid>
                         <Label Grid.Column="1" Grid.Row="6" Content="Datos especiales del Rol"/>
