--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<wpf1:Window x:Name="WindowVar" x:Class="Gestion_AcademicoAdministrativa_Abastos.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:wpf1="http://schemas.microsoft.com/xps/2005/06" mc:Ignorable="d" Title="Aplicacion" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Style="{StaticResource SpecialTextControl}">
+﻿<wpf1:Window x:Name="WindowVar" x:Class="Gestion_AcademicoAdministrativa_Abastos.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:wpf1="http://schemas.microsoft.com/xps/2005/06" mc:Ignorable="d" Title="Aplicacion" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Style="{StaticResource SpecialTextControl}" Height="678">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0" Opacity="0">
             <GradientStop Color="#FF70E0A9" Offset="0" />
@@ -136,8 +136,8 @@
                             <Label Grid.Column="0" Content="Email"/>
                             <TextBox x:Name="TxtEmail" Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                             <Label Grid.Column="2" Content="Teléfono/s"/>
-                            <DataGrid x:Name="DataGridTelefono" Grid.Column="2" Grid.Row="1" IsReadOnly="True" Margin="15" HeadersVisibility="None">
-                                <DataGridTextColumn Width="100*" Binding="{Binding Telefono}"/>
+                            <DataGrid x:Name="DataGridTelefono" Grid.Column="2" Grid.Row="1" IsReadOnly="True" Margin="15" HeadersVisibility="All" AutoGenerateColumns="True">
+                                <!--DataGridTextColumn Header="Test" Width="100*" Binding="{Binding Path=Telefono}"/-->
                             </DataGrid>
                         </Grid>
                         <Label Grid.Column="1" Grid.Row="6" Content="Datos especiales del Rol"/>
