--- a/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         WindowStartupLocation="CenterScreen"
         PreviewLostKeyboardFocus="Window_PreviewLostKeyboardFocus"
+        AllowsTransparency="True" Background="Transparent"
+        WindowStyle="None"
         mc:Ignorable="d"
         Title="Configuration" Height="800" Width="600">
     <Grid>
@@ -30,7 +32,9 @@
             <RowDefinition Height="5*" />
             <RowDefinition Height="10*" />
             <RowDefinition Height="5*" />
-            <RowDefinition Height="35*" />
+            <RowDefinition Height="25*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         <Label Content="Tamaño de la fuente" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
         <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2"
@@ -47,5 +51,6 @@
                 ValueChanged="ScreenSize_ValueChanged"
                 AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"/>
         <Button x:Name="BtnMaximize" Grid.Column="1" Grid.Row="7" Content="Maximizar/Minimizar" Click="BtnMaximize_Click"/>
+        <Button x:Name="BtnClose" Grid.Column="1" Grid.Row="9" Content="Salir" Click="BtnClose_Click"/>
     </Grid>
 </Window>
