--- a/Gestion_AcademicoAdministrativa_Abastos/styles/DataGrid.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/DataGrid.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.styles">
-    <Style TargetType="{x:Type DataGrid}">
+    <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource SpecialTextControl}">
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#FF262626" />
         <Setter Property="HorizontalScrollBarVisibility" Value="Disabled" />
