--- a/Gestion_AcademicoAdministrativa_Abastos/LogIn.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/LogIn.xaml
@@ -77,45 +77,47 @@
                 <RowDefinition Height="20*" />
             </Grid.RowDefinitions>
             <Border Grid.Row="1" Grid.Column="1" BorderThickness="20" CornerRadius="10,0,10,0">
-            <Grid x:Name="LogInContent" Grid.Row="1" Grid.Column="1">
-                <Grid.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF2A2D34" />
-                        <GradientStop Color="#FF15171B" Offset="1" />
-                    </LinearGradientBrush>
-                </Grid.Background>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="15*" />
-                    <ColumnDefinition Width="70*" />
-                    <ColumnDefinition Width="15*" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="5*" />
-                </Grid.RowDefinitions>
-                <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Content="usuario" Background="{x:Null}"></Label>
-                <TextBox VerticalContentAlignment="Center" x:Name="UsernameField" Grid.Column="1" Grid.Row="2"></TextBox>
-                <Label Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Content="contraseña" Background="{x:Null}"></Label>
-                <PasswordBox VerticalContentAlignment="Center" x:Name="PasswordeField" Grid.Column="1" Grid.Row="5" FontFamily="ms-appx:///Assets/PassDot.ttf#PassDot" />
-                <Button x:Name="LogInButton" Content="Iniciar sesión" Grid.Column="1" Grid.Row="7" Click="LogInButton_Click"/>
-                    <CheckBox Grid.Column="1" Grid.Row="8" x:Name="CheckSaveInformation" Content="Guardar combinación de Usuario/Contraseña" HorizontalAlignment="Center"/>
-                    <Button x:Name="UrlLinker" Grid.Column="1" Grid.Row="9" Click="UrlLinker_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Consultar Información">
-                    <Button.Template>
-                        <ControlTemplate TargetType="{x:Type Button}">
-                            <ContentPresenter/>
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
-            </Grid>
+                <Grid x:Name="LogInContent" Grid.Row="1" Grid.Column="1">
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FF2A2D34" />
+                            <GradientStop Color="#FF15171B" Offset="1" />
+                        </LinearGradientBrush>
+                    </Grid.Background>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="15*" />
+                        <ColumnDefinition Width="70*" />
+                        <ColumnDefinition Width="15*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="5*" />
+                    </Grid.RowDefinitions>
+                    <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Content="Formulario de Acceso" Background="{x:Null}" FontWeight="Bold"/>
+                    <Label Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Content="usuario" Background="{x:Null}" />
+                    <TextBox VerticalContentAlignment="Center" x:Name="UsernameField" Grid.Column="1" Grid.Row="3"></TextBox>
+                    <Label Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" Content="contraseña" Background="{x:Null}"></Label>
+                    <PasswordBox VerticalContentAlignment="Center" x:Name="PasswordeField" Grid.Column="1" Grid.Row="6" FontFamily="ms-appx:///Assets/PassDot.ttf#PassDot" />
+                    <Button x:Name="LogInButton" Content="Iniciar sesión" Grid.Column="1" Grid.Row="8" Click="LogInButton_Click"/>
+                    <CheckBox Grid.Column="1" Grid.Row="9" x:Name="CheckSaveInformation" Content="Guardar combinación de Usuario/Contraseña" HorizontalAlignment="Center"/>
+                    <Button x:Name="UrlLinker" Grid.Column="1" Grid.Row="10" Click="UrlLinker_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Consultar Información">
+                        <Button.Template>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <ContentPresenter/>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </Grid>
             </Border>
         </Grid>
     </Grid>
