--- a/Gestion_AcademicoAdministrativa_Abastos/styles/DataGrid.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/DataGrid.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.styles">
     <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource SpecialTextControl}">
+        <Setter Property="Padding" Value="0" />
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#FF262626" />
         <Setter Property="HorizontalScrollBarVisibility" Value="Disabled" />
