--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -6,6 +6,7 @@
     <Application.Resources>
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries >
+                <ResourceDictionary Source="styles/Colors.xaml"/>
                 <ResourceDictionary Source="styles/Overall.xaml"/>
                 <ResourceDictionary Source="styles/Resources.xaml"/>
                 <ResourceDictionary Source="styles/DataGrid.xaml"/>
