--- a/Gestion_AcademicoAdministrativa_Abastos/Styles/Colors.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Styles/Colors.xaml
@@ -1,4 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos">
+    <Color x:Key="MainColor">#FF15171B</Color>
+    <SolidColorBrush x:Key="MainColorSolid" Color="{DynamicResource MainColor}" />
+    
+    <Color x:Key="BackgroundColorfulGradientStart">#FF69E655</Color>
+    <Color x:Key="BackgroundColorfulGradientEnd">#FF006CC5</Color>
+    <LinearGradientBrush x:Key="BackgroundColorfulGradient" EndPoint="0.5,1" StartPoint="0.5,0">
+        <GradientStop Color="{DynamicResource BackgroundColorfulGradientStart}" Offset="0" />
+        <GradientStop Color="{DynamicResource BackgroundColorfulGradientEnd}" Offset="1" />
+    </LinearGradientBrush>
+
+    <Color x:Key="SecondaryColor">#FF2A2D34</Color>
+    <LinearGradientBrush x:Key="BackgroundContainerGradient" EndPoint="0.5,1" StartPoint="0.5,0">
+        <GradientStop Color="{DynamicResource SecondaryColor}" />
+        <GradientStop Color="{DynamicResource MainColor}" Offset="1" />
+    </LinearGradientBrush>
 </ResourceDictionary>
