--- a/Gestion_AcademicoAdministrativa_Abastos/Horario.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Horario.xaml
@@ -6,15 +6,9 @@
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
         Title="Horario" Height="720" Width="1280">
-    <Grid x:Name="Container" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <Grid x:Name="MainGridContent" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2">
-                <Grid.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF69E655" Offset="0" />
-                        <GradientStop Color="#FF006CC5" Offset="1" />
-                    </LinearGradientBrush>
-                </Grid.Background>
+    <Grid x:Name="Container" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid x:Name="MainGridContent" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2" Background="{DynamicResource BackgroundColorfulGradient}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="5*" />
                     <ColumnDefinition Width="90*" />
@@ -25,7 +19,7 @@
                     <RowDefinition Height="90*" />
                     <RowDefinition Height="5*" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF15171B">
+                <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{DynamicResource MainColorSolid}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*" />
                         <ColumnDefinition Width="90*" />
