--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -1,10 +1,4 @@
-﻿<wpf1:Window x:Name="WindowVar" x:Class="Gestion_AcademicoAdministrativa_Abastos.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:wpf1="http://schemas.microsoft.com/xps/2005/06" mc:Ignorable="d" Title="Aplicacion" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Style="{StaticResource SpecialTextControl}" Height="678">
-    <Window.Background>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0" Opacity="0">
-            <GradientStop Color="#FF70E0A9" Offset="0" />
-            <GradientStop Color="#FF045A61" Offset="1" />
-        </LinearGradientBrush>
-    </Window.Background>
+﻿<wpf1:Window x:Name="WindowVar" x:Class="Gestion_AcademicoAdministrativa_Abastos.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:wpf1="http://schemas.microsoft.com/xps/2005/06" mc:Ignorable="d" Title="Aplicacion" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Style="{StaticResource SpecialTextControl}" Height="678">
     <Window.Effect>
         <DropShadowEffect BlurRadius="10" ShadowDepth="0" Direction="-45" RenderingBias="Quality" Opacity="0.35" />
     </Window.Effect>
@@ -20,10 +14,6 @@
             <RowDefinition Height="96*" />
         </Grid.RowDefinitions>
         <Grid x:Name="TopBar" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="Auto" MouseDown="TopBar_MouseDown" PreviewMouseLeftButtonDown="TopBar_PreviewMouseLeftButtonDown">
-            <!--Grid.ColumnDefinitions>
-                <ColumnDefinition Width="95*" />
-                <ColumnDefinition Width="5*" />
-            </Grid.ColumnDefinitions-->
             <Grid.RowDefinitions>
                 <RowDefinition Height="95*" />
             </Grid.RowDefinitions>
@@ -46,7 +36,7 @@
             </Grid>
         </Grid>
         <Grid Grid.Row="1" x:Name="WindowContent">
-            <Grid x:Name="MainGridContent" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid x:Name="MainGridContent" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="20*" />
                     <ColumnDefinition Width="80*" />
@@ -118,7 +108,7 @@
                                 <ColumnDefinition Width="41*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="Nombre"/>
-                            <TextBox x:Name="TxtNombre" Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
+                            <TextBox x:Name="TxtNombre" Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="False" Margin="15"/>
                             <Label Grid.Column="2" Content="Apellidos"/>
                             <TextBox x:Name="TxtApellidos" Grid.Column="2" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                         </Grid>
