--- a/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
@@ -6,7 +6,7 @@
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="Grid.IsSharedSizeScope" Value="true" />
         <Setter Property="HasDropShadow" Value="True" />
-        <Setter Property="Background" Value="#FF15171B" />
+        <Setter Property="Background" Value="{DynamicResource MainColorSolid}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
