--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="styles/Text.xaml"/>
                 <ResourceDictionary Source="styles/Reclamacion.xaml"/>
                 <ResourceDictionary Source="styles/ContextMenu.xaml"/>
+                <ResourceDictionary Source="styles/Slider.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
