--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -17,7 +17,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="95*" />
             </Grid.RowDefinitions>
-            <Label x:Name="WindowTitle" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding ApplicationTitle}" FontSize="10" />
+            <Label x:Name="WindowTitle" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding ApplicationTitle}" FontSize="{DynamicResource TitleFontSize}" />
             <Grid Grid.Column="1" HorizontalAlignment="Right" Width="75" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="33*" />
