--- a/Gestion_AcademicoAdministrativa_Abastos/Notification.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Notification.xaml
@@ -4,8 +4,41 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
+        xmlns:properties="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.Properties"
         mc:Ignorable="d"
+        AllowsTransparency="True" WindowStyle="None" Background="Transparent"
         Title="Notification" Height="450" Width="800">
-    <Grid>
+    <Grid Background="{DynamicResource MainColorSolid}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="80*" />
+        </Grid.RowDefinitions>
+        <Grid x:Name="TopBar" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="Auto" MouseDown="TopBar_MouseDown" Background="{DynamicResource TopBarGradient}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="95*" />
+            </Grid.RowDefinitions>
+            <Label Padding="0" x:Name="WindowTitle" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding NotificationTitle}" FontFamily="5" />
+            <Grid Grid.Column="1" HorizontalAlignment="Right" Width="25" VerticalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100*" />
+                </Grid.ColumnDefinitions>
+                <Button x:Name="BtnCerrar" Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
+            </Grid>
+        </Grid>
+        <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="90*" />
+                <ColumnDefinition Width="5*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="90*" />
+                <RowDefinition Height="5*" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="1" Grid.Column="1" x:Name="WindowContent"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   Text="{Binding NotificationContent}" Padding="0" Height="Auto"/>
+        </Grid>
     </Grid>
 </Window>
